# silverspeak

./: .buildinfo  .flake8  .gitattributes  .gitignore  .isort.cfg  README.md  api_reference.html  app.py  current_node.txt  evaluate.py  evaluate.sh  evaluate_all.sh  genindex.html  identical_map.txt  index.html  installation.html  mkdocs.yml  mypy.ini  objects.inv  orig.txt  perplexity_tests.py  py-modindex.html  pyproject.toml  requirements.txt  rewritten.txt  run_experiments.sh  search.html  searchindex.js  setup.py  test_llm_prompt_normalization.py  test_lm_normalization.py  test_spell_check_normalization.py  usage.html
.github/: dependabot.yml
.github/workflows/: acceptability-test.yml  docs.yml  fix-pages-domain.yml  full-test.yml  linting.yml  python-publish.yml  security-audit.yml
_sources/: api_reference.rst.txt  index.rst.txt  usage.rst.txt
docs/: api.md  challenges.md  hkb.md  index.md  installation.md  normalization_strategies.md  usage.md
docs/normalization_strategies/: dominant_script.md  dominant_script_and_block.md  graph_based.md  language_model.md  local_context.md  ngram.md  ocr_confidence.md  tokenizer.md
docs/source/: api_reference.rst  challenges.rst  conf.py  hkb.rst  index.rst  installation.rst  normalization_strategies.rst  usage.rst
docs/source/_static/: custom.css
docs/source/normalization_strategies/: dominant_script.rst  dominant_script_and_block.rst  graph_based.rst  language_model.rst  local_context.rst  ngram.rst  ocr_confidence.rst  tokenizer.rst
examples/: advanced_normalization_strategies.py  normalization_strategies.py  spell_check_examples.py  targeted_attack_example.py
experiments/: compute_metrics.py  divergence_embeddings_attacks.ipynb  generate_dataset_watermarks.py  perplexity_tests.ipynb  visualization.py  watermarking_utils.py
experiments/evaluators/: evaluator_argugpt.py  evaluator_binoculars.py  evaluator_detectGPT.py  evaluator_fast_detectGPT.py  evaluator_ghostbuster_api.py  evaluator_openai.py  evaluator_watermark.py  pipeline.py
experiments/models/binoculars/: __init__.py  detector.py
experiments/models/detectgpt/: detectGPT.py
experiments/models/fast_detectgpt/: __init__.py  custom_datasets.py  data_builder.py  fast_detect_gpt.py  local_infer.py  metrics.py  model.py
scripts/: build_hkb.py  fetch_visual_data.py
search_homolgyphs/: README.md  combined_maps.json  combined_maps.py  identical_map.py  ocr_chars_refined_map.json  ocr_confusables.py  ocr_confusables_refined.py  unicode_confusables_map.csv  unicode_confusables_map.json  unicode_confusables_map.py  unicode_confusables_same_case_map.json
silver_speak/: __init__.py  __main__.py  identical_map.py  optimized_attack.py  random_attack.py  silver_speak.py  star_attack.py  utils.py
silver_speak.egg-info/: PKG-INFO
silver_speak/deletion/: random_attack.py
silver_speak/detection_systems/: __init__.py  detectionSystem.py
silver_speak/detection_systems/IDMGSPGalactica/: __init__.py
silver_speak/detection_systems/detectGPT/: __init__.py  detectGPT.py
silver_speak/homoglyphs/: greedy_attack.py  iterative_attack.py  optimized_attack.py  random_attack.py  star_attack.py
silverspeak/: __init__.py  __main__.py  utils.py
silverspeak.egg-info/: PKG-INFO  SOURCES.txt
silverspeak/homoglyphs/: __init__.py  benchmark.py  fast_normalize.py  greedy_attack.py  homoglyph_replacer.py  normalization_strategies.py  normalize.py  normalize_result.py  pipeline.py  random_attack.py  script_block_category_utils.py  strip.py  unicode_confusables_map.json  unicode_scoring.py  utils.py
silverspeak/homoglyphs/attacks/: __init__.py  greedy_attack.py  random_attack.py  shared.py  targeted_attack.py
silverspeak/homoglyphs/hkb/: __init__.py  build.py  kb.py  visual.py
silverspeak/homoglyphs/normalization/: README.md  __init__.py  dominant_script.py  graph_based.py  language_model.py  llm_prompt.py  local_context.py  logging.py  ngram.py  ocr_confidence.py  spell_check.py  tokenizer.py
test/: test_advanced_strategies_integration.py  test_benchmark.py  test_fast_normalize.py  test_hkb.py  test_homoglyph_replacer.py  test_normalization_strategies.py  test_random_attack_integration.py  test_targeted_attack.py  test_utils.py
