[tool.poetry]
name = "silverspeak"
version = "3.0.0"
description = "A Python library to perform homoglyph-based attacks on text. It supports both identical and non-identical homoglyphs across multiple languages."
readme = "README.md"
license = "GPL-3.0"
authors = ["Aldan Creo <os@acmc.fyi>"]
keywords = [
    "homoglyph", "attack", "text", "security", "obfuscation", "phishing", 
    "spoofing", "unicode", "cybersecurity", "text-manipulation", 
    "text-security", "character-substitution", "text-obfuscation", 
    "identity-theft", "data-protection", "adversarial-attacks", 
    "unicode-homoglyphs", "text-attacks", "cyber-attacks", "information-security"
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pandas = "^2.3.3"
unicodedataplus = "^16.0.0.post1"
tomli = "^2.2.1"
symspellpy = {version = "^6.9.0", optional = true}
pyspellchecker = {version = "^0.8.2", optional = true}
python-Levenshtein = {version = "^0.27.0", optional = true}
neuspell = {version = "^1.0.0", optional = true}
networkx = {version = "^3.4", optional = true}
transformers = {version = "^4.57.0", optional = true}
torch = {version = "^2.7.0", optional = true}
nltk = {version = "^3.9.4", optional = true}
pillow = {version = "^11.3.0", optional = true}
python-doctr = {version = "^0.7.0", optional = true}

[tool.poetry.extras]
spell-check = ["symspellpy", "pyspellchecker", "python-Levenshtein"]
contextual-spell-check = ["neuspell"]
ngram-analysis = ["nltk"]
graph-analysis = ["networkx"]
advanced = ["transformers", "torch", "nltk", "pillow", "python-doctr"]
all = ["symspellpy", "pyspellchecker", "python-Levenshtein", "neuspell", "networkx", "transformers", "torch", "nltk", "pillow", "python-doctr"]

[tool.poetry.group.advanced]
optional = true

[tool.poetry.group.advanced.dependencies]
transformers = "^4.57.0"
torch = "^2.7.0"
nltk = "^3.9.4"
pillow = "^11.3.0"
python-doctr = "^0.7.0"

[tool.poetry.group.spell-check]
optional = true

[tool.poetry.group.spell-check.dependencies]
symspellpy = "^6.9.0"
pyspellchecker = "^0.8.2"
python-Levenshtein = "^0.27.0"

[tool.poetry.group.contextual-spell-check]
optional = true

[tool.poetry.group.contextual-spell-check.dependencies]
neuspell = "^1.0.0"

[tool.poetry.group.ngram-analysis]
optional = true

[tool.poetry.group.ngram-analysis.dependencies]
nltk = "^3.9.4"

[tool.poetry.group.graph-analysis]
optional = true

[tool.poetry.group.graph-analysis.dependencies]
networkx = "^3.4"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.4.0"
mkdocs-material = "^9.6.0"
mkdocstrings = {version = "^0.29.0", extras = ["python"]}
flake8 = "^7.0.0"
black = "^25.1.0"
isort = "^6.0.0"
mypy = "^1.15.0"
tomli = "^2.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools]
packages = ["silverspeak", "silverspeak.homoglyphs", "silverspeak.homoglyphs.hkb"]

[tool.setuptools.package-data]
"silverspeak.homoglyphs" = ["identical_map.json", "unicode_confusables_map.json", "ocr_chars_map.json", "ocr_chars_refined_map.json", "hkb_data/graph.json.gz"]

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''
