[tool.poetry]
name = "silverspeak"
version = "3.0.0"
description = "A Python library to perform homoglyph-based attacks on text. It supports both identical and non-identical homoglyphs across multiple languages."
readme = "README.md"
license = "GPL-3.0"
authors = ["Aldan Creo <os@acmc.fyi>"]
keywords = [
    "homoglyph", "attack", "text", "security", "obfuscation", "phishing", 
    "spoofing", "unicode", "cybersecurity", "text-manipulation", 
    "text-security", "character-substitution", "text-obfuscation", 
    "identity-theft", "data-protection", "adversarial-attacks", 
    "unicode-homoglyphs", "text-attacks", "cyber-attacks", "information-security"
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pandas = "^2.3.3"
unicodedataplus = "^16.0.0.post1"
tomli = "^2.2.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.4.0"
mkdocs-material = "^9.6.0"
mkdocstrings = {version = "^0.29.0", extras = ["python"]}
flake8 = "^7.0.0"
black = "^25.1.0"
isort = "^6.0.0"
mypy = "^1.15.0"
tomli = "^2.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools]
packages = ["silverspeak", "silverspeak.homoglyphs", "silverspeak.homoglyphs.hkb"]

[tool.setuptools.package-data]
"silverspeak.homoglyphs" = ["identical_map.json", "unicode_confusables_map.json", "ocr_chars_map.json", "ocr_chars_refined_map.json", "hkb_data/graph.json.gz"]

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''
